--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-28  Tom Tromey  <tromey@redhat.com>
+
+	* java/lang/Class.h: Include Package.h.
+	(Class::getProtectionDomain): Declare.
+	(Class::getPackage): Declare.
+
 2002-08-28  Michael Koch <konqueror@gmx.de>
 
 	* java/net/InetSocketAddress.java: Added some documentation and argument
