--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,13 @@
+2002-08-29  Michael Koch  <konqueror@gmx.de>
+
+	* java/net/DatagramPacket.java: updated to JDK 1.4 API
+	new methods are:
+	DatagramPacket(byte[] buf, int offset, int length, SocketAddress
+	  address),
+	DatagramPacket(byte[] buf, int length, SocketAddress address),
+	void setSocketAddress(SocketAddress address)
+	public SocketAddress getSocketAddress()
+
 2002-08-29  Tom Tromey  <tromey@redhat.com>
 
 	* java/io/natFileDescriptorPosix.cc (setLength): Handle case where
