--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,24 @@
+2002-08-29  Richard Henderson  <rth@redhat.com>
+
+	* expr.h (enum block_op_methods): New.
+	(emit_block_move): Update prototype.
+	* expr.c (block_move_libcall_safe_for_call_parm): New.
+	(emit_block_move_via_loop): New.
+	(emit_block_move): Use them.  New argument METHOD.
+	(emit_push_insn): Always respect the given alignment.
+	(expand_assignment): Update call to emit_block_move.
+	(store_expr, store_field, expand_expr): Likewise.
+	* builtins.c (expand_builtin_apply): Likewise.
+	(expand_builtin_memcpy, expand_builtin_va_copy): Likewise.
+	* function.c (expand_function_end): Likewise.
+	* config/sh/sh.c (sh_initialize_trampoline): Likewise.
+	* config/sparc/sparc.c (sparc_va_arg): Likewise.
+	* calls.c (expand_call, emit_library_call_value_1): Likewise.
+	(save_fixed_argument_area): Use emit_block_move with
+	BLOCK_OP_CALL_PARM instead of move_by_pieces.
+	(restore_fixed_argument_area): Likewise.
+	(store_one_arg): Fix alignment parameter to emit_push_insn.
+
 2002-08-29  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* install.texi (hppa64-hp-hpux11*): Document installation procedure.
