--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-29  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* som.h (ALWAYS_STRIP_DOTDOT): Define to 1.
+
 2002-08-29  Richard Henderson  <rth@redhat.com>
 
 	* expr.h (enum block_op_methods): New.
