--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-29  "Dhananjay R. Deshpande" <dhananjayd@kpit.com>
+
+	* h8300.c (shift_alg_hi): Various tweaks to improve performance
+	of HImode shifts.
+	(get_shift_alg): Corresponding changes.
+
 2002-08-29  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* som.h (ALWAYS_STRIP_DOTDOT): Define to 1.
