--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-29  Geoffrey Keating  <geoffk@redhat.com>
+
+	* MAINTAINERS: Update Jason Eckhardt's address, remove i860.
+
 2002-08-24  Geoffrey Keating  <geoffk@redhat.com>
 
 	* MAINTAINERS: Change my mailing address.
